DeliSOS: add lat long in filter and search restaurants
