# api/dist/swagger.json
@@ -1662,7 +1662,9 @@
                             "required": [
                                 "meal",
                                 "cuisins",
-                                "minBudget"
+                                "minBudget",
+                                "latitude",
+                                "longitude"
                             ],
                             "properties": {
                                 "meal": {
@@ -1688,6 +1690,14 @@
                                 "maxBudget": {
                                     "type": "number",
                                     "description": "maximum budget if selected by user"
+                                },
+                                "latitude": {
+                                    "type": "string",
+                                    "description": "The value must be between -90 to 90"
+                                },
+                                "longitude": {
+                                    "type": "string",
+                                    "description": "The value must be between -180 to 180"
                                 }
                             }
                         }
@@ -1715,7 +1725,7 @@
                 }
             }
         },
-        "/user/searchRestaurants/{name}": {
+        "/user/searchRestaurants/{name}/{latitude}/{longitude}": {
             "get": {
                 "tags": [
                     "user"
@@ -1733,6 +1743,20 @@
                         "in": "path",
                         "name": "name",
                         "description": "name of restaurant, to be search.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "latitude",
+                        "description": "The value must be between -90 to 90",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "longitude",
+                        "description": "The value must be between -180 to 180",
                         "required": true,
                         "type": "string"
                     },
